--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="timeline__header">
                         <p class="timeline__timeframe">2011</p>
                         <h3>Panel Gisha</h3>
-                        <h5>Web Designer</h5>
+                        <h5>Developer</h5>
                     </div>
                     <div class="timeline__desc">
                         <ul class="work_experience_list">
@@ -344,7 +344,7 @@
 
             <p class="lead">
                 Do you have an <a href="#">opening</a>?<br/>
-                Am I A Good match for your organization?<br/>
+                Am I a good match for your organization?<br/>
                 Contact me now and let’s start the hiring process.
             </p>
 
