--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
 
         <div class="col-block stats__col ">
             <div class="stats__count">
-                128
+                13,425
             </div>
-            <h4>Awards Received</h4>
+            <h4>Sent Emails</h4>
         </div>
         <div class="col-block stats__col">
             <div class="stats__count">
@@ -382,9 +382,9 @@
                 <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
             </div>
             <div class="stats__count">
-                110
+                156
             </div>
-            <h4>Projects Completed</h4>
+            <h4>Fifa wins</h4>
         </div>
         <div class="col-block stats__col">
             <div class="stats__count">
