add what People say section

--- a/index.html
+++ b/index.html
@@ -140,17 +140,16 @@
         <div class="col-six tab-full left">
             <h3>Hey!</h3>
 
-            <p>I am Etay Maya. <br>
-                I am Industrial Engineer and looking for my next challenge. <br>
-                I Filled with Motivations with high work ethic, high service oriented and systemic vision ,
-                Independent learning ability , willingness to challenging work , pressure-resistant ability and ability
-                to work in a team.</p>
+            <p>I am Etay Maya.
+                With a analytical mindset and high understanding of business needs,<br>
+                I am looking for an entry analyst or a BI position. Im highly creative,<br>
+                and with an out of the box way of thinking I can be an added value to your organization. <br>
+                I am a fast learner and a team player, who embrace challenges and successfully solve them.
+            </p>
 
             <p>
-                With a analytical mindset and high understanding of business needs, I am looking for an entry analyst or
-                BI position. Im highly creative, and with an out of the box way of thinking I can be an added value to
-                your organization.
-                I am a fast learner and a team player, who embrace challenges and successfully solve them.
+                I hold a B.Sc in Industrial Engineering and Management from Ben Gurion University, <br>
+                I'm highly motivated and have an outstanding work ethics and pressure-resistant ability.
             </p>
         </div>
 
@@ -290,40 +289,78 @@
 
         <div class="col-full testimonials__slider">
 
+
+
             <div class="testimonials__slide">
-                <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum.
-                    Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos
-                    qui praesentium corpori.</p>
-                <div class="testimonials__author h06">
-                    Tim Cook
-                    <span>CEO, Apple</span>
-                </div>
+                <a href="https://www.linkedin.com/in/yaniv-davidovich-a811a8b6/" target="_blank">
+                    <img src="images/Yaniv.jpg" alt="omer image" class="testimonials__avatar">
+                    <div class="testimonials__author h06">
+                        Yaniv Davidovich
+                        <span>Development Team Leader At Compie</span>
+                    </div>
+                </a>
+                <p>Etay found the best and smoothest way to get me into the project.
+                    As the product manager, Etay’s attention to the customer needs and the ability to understand the
+                    developers point of view, made the development process ideal.</p>
             </div>
 
             <div class="testimonials__slide">
-                <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi
-                    adipisci.
-                    Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus
-                    quisquam vel.</p>
-                <div class="testimonials__author h06">
-                    Sundar Pichai
-                    <span>CEO, Google</span>
-                </div>
+                <a href="https://www.linkedin.com/in/dor-geva-236185a5/" target="_blank">
+                    <img src="images/dor.jpg" alt="omer image" class="testimonials__avatar">
+                    <div class="testimonials__author h06">
+                        Dor Geva
+                        <span>Project Manager At Compie</span>
+                    </div>
+                </a>
+                <p>
+                    In light of all my acquaintance with Etay, I recommend it with a heart and heart.
+                    I can recommend Etay without a doubt.</p>
             </div>
 
             <div class="testimonials__slide">
-                <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt.
-                    Ducimus aut sed ipsam.
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius
-                    distinctio.</p>
-                <div class="testimonials__author h06">
-                    Satya Nadella
-                    <span>CEO, Microsoft</span>
-                </div>
+                <a href="https://www.linkedin.com/in/omer-marcovich-655108a9/" target="_blank">
+                    <img src="images/omer.jpg" alt="omer image" class="testimonials__avatar">
+                    <div class="testimonials__author h06">
+                        Omer Marcovich
+                        <span>Development Team Leader At Taglit</span>
+                    </div>
+                </a>
+                <p>My first project with Etay was at my very first project in the company and my career. I had the
+                    privilege of working with a sharp, humorous, professional, thorough person one that is fun to work
+                    with.</p>
+
             </div>
+
+
+            <div class="testimonials__slide">
+                <a href="https://www.linkedin.com/in/adir-solomon-288736b2/" target="_blank">
+                    <img src="images/adirSolomon.jpg" alt="omer image" class="testimonials__avatar">
+                    <div class="testimonials__author h06">
+                        Adir Solomon
+                        <span>Web Developer At Compie</span>
+                    </div>
+                </a>
+                <p>
+                    When Etay started working at compie,
+                    he had already have suggestions for how to increase efficiency and optimize work related processes.
+                    he took responsibility for the projects in no time and maintained a continuous relationship between the company and the customer while making sure the customer is satisfied.
+                    </p>
+            </div>
+
+            <div class="testimonials__slide">
+                <a href="https://www.linkedin.com/in/adir-schlezinger-83b33995/" target="_blank">
+                    <img src="images/adir.jpg" alt="omer image" class="testimonials__avatar">
+                    <div class="testimonials__author h06">
+                        Adir Schlezinger
+                        <span>Software Engineer At Compie</span>
+                    </div>
+                </a>
+                <p>
+                    Etay himself is a responsible, ambitious and sharp person  and performs every task he receives in best way possible.
+                    After working on several projects with me, I recommend on hiring him.</p>
+            </div>
+
+
 
         </div> <!-- end testimonials__slider -->
 
@@ -367,7 +404,7 @@
 
         <div class="col-block stats__col ">
             <div class="stats__count">
-                13,425
+                13425
             </div>
             <h4>Sent Emails</h4>
         </div>
@@ -382,9 +419,9 @@
                 <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
             </div>
             <div class="stats__count">
-                156
+                159
             </div>
-            <h4>Fifa wins</h4>
+            <h4>FIFA wins</h4>
         </div>
         <div class="col-block stats__col">
             <div class="stats__count">
